[gd_scene load_steps=7 format=3 uid="uid://dox4ifyfxt4bk"]

[ext_resource type="Script" path="res://scripts/objectscripts/player.gd" id="1_67d6m"]
[ext_resource type="Texture2D" uid="uid://din33rvrwbvo5" path="res://assets/sprites/player/spr_pc_43x53.png" id="2_xsti4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30cy6"]
size = Vector2(20, 40)

[sub_resource type="Animation" id="Animation_3aggp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j1m65"]
resource_name = "walk"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfjpm"]
_data = {
"RESET": SubResource("Animation_3aggp"),
"walk": SubResource("Animation_j1m65")
}

[node name="Player" type="CharacterBody2D"]
top_level = true
collision_layer = 4
collision_mask = 27
script = ExtResource("1_67d6m")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(7, 1)
texture = ExtResource("2_xsti4")
hframes = 4
vframes = 3

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, -4)
shape = SubResource("RectangleShape2D_30cy6")

[node name="StunTimer" type="Timer" parent="."]

[node name="FallBufferTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="BufferedJumpTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="UpgradeTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vfjpm")
}

[node name="ImpactingObjectRay" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(0, 30)
collision_mask = 16

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="FallBufferTimer" to="." method="_on_fall_buffer_timer_timeout"]
[connection signal="timeout" from="BufferedJumpTimer" to="." method="_on_buffered_jump_timer_timeout"]
[connection signal="timeout" from="UpgradeTimer" to="." method="_on_upgrade_timer_timeout"]
